--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.unity.ide.cursor": "file:G:/tools/com.unity.ide.cursor@2c0153a9ba",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.multiplayer.center": "1.0.0",
     "com.unity.ugui": "2.0.0",
